# tailnet-microservices

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_v1.md  PROMPT_build.md  PROMPT_plan.md  PROMPT_plan_work.md  README.md  RUNBOOK.md  anthropic-oauth-proxy.example.toml  loop.sh  mise.toml  renovate.json
.claude/hooks/: convergence-check.sh  ralph-activity.sh  ralph-guard.sh
.github/workflows/: ci.yml
11/eeaefee198/: metadata.json
11/eeaefee198/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
a8/519436696b/: metadata.json
a8/519436696b/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
ac/a5286805f0/: metadata.json
ac/a5286805f0/0/: content_hash.txt  full.jsonl  metadata.json
crates/anthropic-auth/: Cargo.toml
crates/anthropic-auth/src/: constants.rs  credentials.rs  error.rs  lib.rs  pkce.rs  token.rs
crates/anthropic-pool/: Cargo.toml
crates/anthropic-pool/src/: error.rs  lib.rs  pool.rs  quota.rs  refresh.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  secret.rs
crates/provider/: Cargo.toml
crates/provider/src/: lib.rs  passthrough.rs
d2/8135a83cd2/: metadata.json
d2/8135a83cd2/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
f2/af177d57ec/: metadata.json
f2/af177d57ec/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
f3/484b4ffca5/: metadata.json
f3/484b4ffca5/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
k8s/: admin-service.yaml  config.toml  configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
services/oauth-proxy/: Cargo.toml
services/oauth-proxy/src/: admin.rs  config.rs  error.rs  main.rs  metrics.rs  provider_impl.rs  proxy.rs  service.rs  tailnet.rs
specs/: README.md  anthropic-oauth-gateway.md  generic-client-support.md  oauth-proxy.md  operator-migration-addendum.md  operator-migration.md  rand-0.10-migration.md  streaming-timeout-fix.md  tailnet.md
