[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/provider",
    "crates/anthropic-auth",
    "crates/anthropic-pool",
    "services/oauth-proxy",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Brent <basher83@themothership.work>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2", "stream"] }

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.9"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Serialization
serde_json = "1"

# Identifiers
uuid = { version = "1", features = ["v4"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Middleware
tower = { version = "0.5", features = ["limit"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Crypto / encoding (PKCE, OAuth)
sha2 = "0.10"
base64 = "0.22"
rand = "0.10"

# Internal crates
common = { path = "crates/common" }
provider = { path = "crates/provider" }
anthropic-auth = { path = "crates/anthropic-auth" }
anthropic-pool = { path = "crates/anthropic-pool" }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
