[package]
name = "anthropic-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["json", "form"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "=3.24.0"
