[package]
name = "anthropic-pool"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anthropic-auth = { workspace = true }
provider = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "=3.24.0"
