[package]
name = "oauth-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "anthropic-oauth-proxy"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
provider = { workspace = true }
anthropic-auth = { workspace = true }
anthropic-pool = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tower = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
libc = "=0.2.180"
tempfile = "=3.24.0"
